build_error.txt
Running Gradle task 'assembleDebug'...                          
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
/Users/james/.pub-cache/hosted/pub.dev/mic_stream-0.7.2/android/src/main/java/com/code/aaron/micstream/MicStreamPlugin.java:24: error: cannot find symbol
import io.flutter.plugin.common.PluginRegistry.Registrar;
                                              ^
  symbol:   class Registrar
  location: interface PluginRegistry
/Users/james/.pub-cache/hosted/pub.dev/mic_stream-0.7.2/android/src/main/java/com/code/aaron/micstream/MicStreamPlugin.java:48: error: cannot find symbol
    public void registerWith(Registrar registrar) {
                             ^
  symbol:   class Registrar
  location: class MicStreamPlugin
Note: /Users/james/.pub-cache/hosted/pub.dev/mic_stream-0.7.2/android/src/main/java/com/code/aaron/micstream/MicStreamPlugin.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':mic_stream:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.Note: Recompile with -Xlint:unchecked for details./Users/james/.pub-cache/hosted/pub.dev/mic_stream-0.7.2/android/src/main/java/com/code/aaron/micstream/MicStreamPlugin.java:24: error: cannot find symbol
  import io.flutter.plugin.common.PluginRegistry.Registrar;
                                                ^
    symbol:   class Registrar
    location: interface PluginRegistry
  /Users/james/.pub-cache/hosted/pub.dev/mic_stream-0.7.2/android/src/main/java/com/code/aaron/micstream/MicStreamPlugin.java:48: error: cannot find symbol
      public void registerWith(Registrar registrar) {
                               ^
    symbol:   class Registrar
    location: class MicStreamPluginNote: /Users/james/.pub-cache/hosted/pub.dev/mic_stream-0.7.2/android/src/main/java/com/code/aaron/micstream/MicStreamPlugin.java uses unchecked or unsafe operations.warning: [options] source value 8 is obsolete and will be removed in a future releasewarning: [options] target value 8 is obsolete and will be removed in a future release
  2 errors
  3 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 28s
Running Gradle task 'assembleDebug'...                             29.0s
Gradle task assembleDebug failed with exit code 1
